--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "ag-grid-react": "^33.1.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-force-graph-2d": "^1.27.1",
+    "react-heatmap-grid": "^0.9.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
