--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^19.0.0",
     "react-force-graph-2d": "^1.27.1",
     "react-heatmap-grid": "^0.9.1",
+    "react-icons": "^5.5.0",
     "sass": "^1.86.0",
     "tailwind-merge": "^3.0.2"
   },
